# rust-graphics

./: Cargo.toml  README.md  build.rs
res/: cost.dds  cost_n.dds  dice.mtl
src/: debug.rs  engine.rs  graphics.rs  main.rs  playground.rs  sdf.rs  shader.wgsl  util.rs
src/engine/: async_closure.rs  collisions.rs  component.rs  component_models.rs  component_store.rs  component_transform.rs  debug.rs  errors.rs  events.rs  model_renderer.rs  mouse.rs  raycasting.rs  renderable_model.rs  scene.rs  shader.wgsl  state.rs  test_child_component.rs  test_component.rs  transform_queue.rs  transforms.rs  util.rs
src/engine/collisions/: collider.rs  collision_manager.rs  sdf_boundary.rs
src/engine/events/: component_event.rs  event.rs  event_manager.rs  scheduled_event.rs
src/engine/raycasting/: mouse.rs  ray.rs  raycast_manager.rs
src/engine/state/: app_state.rs  state.rs  state_interpolator.rs  store.rs
src/engine/transforms/: collider_transform.rs  component_transform.rs  model_transform.rs
src/graphics/: camera.rs  instance.rs  iv-shader.wgsl  iv_state.rs  light.wgsl  lighting.rs  model.rs  pipeline.rs  resources.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
src/playground/: pg_cube.rs  pg_shader.wgsl  pg_state.rs  pg_triangle.rs  pg_vertex.rs
src/sdf/: inferred_vertex_mesh.rs  inferred_vertex_model.rs  sdf_shape.rs  triangle.rs  triangle_list.rs
src/util/: point_dict.rs
