[package]
name = "rust-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
rand = "0.8"
async-trait = "0.1.80"
tobj = { version = "3.2.1", features = [
    "async",
]}
# Other dependencies
reqwest = { version = "0.11" }
cfg-if = "1"
instant = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[profile.dev]
opt-level = 0
debug = true
